[package]
name = "ws1001"
version = "0.1.0"
authors = ["Michael Rose <elementation@gmail.com>"]
edition = "2018"

[dependencies]
async-stream = "0.2"
bytes = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
log = "0.4"
tokio-util = { version = "0.2", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
